# intro-autogen

./: .gitignore  README.md  main.py  pyproject.toml
agents/: agent_with_memory.ipynb  agents.ipynb  agents_with_tools.ipynb
doc/: global-field-standards.md
models/: models.ipynb
teams/: get_wi_detail.ipynb  travel_plan.ipynb  wi_team.ipynb
