[project]
name = "intro-autogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.17",
    "asyncio>=3.4.3",
    "autogen-agentchat>=0.5.4",
    "autogen-ext[azure,http-tool,openai]>=0.5.4",
    "dotenv>=0.9.9",
]
